# coursesSystem

./: CMakeLists.txt  Course.cpp  Course.h  Student.cpp  Student.h  main.cpp
